mediaセクションの追加

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -72,131 +72,8 @@
                 </ul>
             </section>
             <!-- media -->
-            <article class="media">
-                <figure class="media__img">
-                    <img
-                        src="{{ 'golf-originalCourse-pc.jpg' | asset_img_url: '3000x'}}"
-                        width="513"
-                        height="311"
-                        alt="戦略性に富むオリジナルコース"
-                        class="media__img--pc"
-                    />
-                    <img
-                        src="{{ 'golf-originalCourse-sp.jpg' | asset_img_url: '3000x'}}"
-                        width="513"
-                        height="311"
-                        alt="戦略性に富むオリジナルコース"
-                        class="media__img--sp"
-                    />
-                </figure>
-                <div
-                    class="media__body js-rellax"
-                    data-rellax-speed="3"
-                    data-rellax-percentage="0.5"
-                >
-                    <p class="media__num section__num">01.</p>
-                    <h3 class="media__ttl">
-                        広大な敷地内にレイアウトされた<br />
-                        戦略性に富むオリジナルコース
-                    </h3>
-                    {% comment %} <p class="media__text">
-                        
-                        7000ヤード越えのロングディスタンスのコースは、<br />
-                        ツーグリーンと比べてグリーンの面積が広くて<br />
-                        難しい場合が多い、ベントのワングリーン<br />
-                        身長よりも高いリベットバンカー、<br />
-                        レンガに囲まれた大きな池など、<br />
-                        戦略的で魅力的なコースがお待ちしています。
-                    </p> {% endcomment %}
 
-                    <p class="media__text">
-                    尾崎将司プロと佐藤謙太郎氏の設計・監修による、<br>
-                    豊富なデータを生かした特徴的なコースデザイン。<br>
-
-                    7,023ヤードというロングディスタンスのコースは、<br>
-                    ベントのワングリーンやそそり立つリベットバンカー、<br>
-                    レンガに囲まれた大きな池など、<br>
-                    美しさと戦略性が見事なバランスを保ち、<br>
-                    プレイヤーの挑戦意欲をかき立てます。<br>
-
-                    四季を通じて美しい緑を舞台に、<br>
-                    ベストコンディションでプレイが楽しめます。<br>
-                    </p>
-
-                    
-                    <a href="{{pages.course.url}}" class="media__btn">詳細はこちら</a>
-                </div>
-            </article>
-            <article class="media media__reverse">
-                <figure class="media__img">
-                    <img
-                        src="{{ 'loge-villa-pc.jpg' | asset_img_url: '3000x'}}"
-                        width="513"
-                        height="311"
-                        alt="戦略性に富むオリジナルコース"
-                        class=""
-                    />
-                </figure>
-                <div
-                    class="media__body js-rellax"
-                    data-rellax-speed="3"
-                    data-rellax-percentage="0.5"
-                >
-                    <p class="media__num section__num">02.</p>
-                    <h3 class="media__ttl">
-                        ゴルフ場までの距離0m<br />
-                        日本の伝統美を感じるロッジへの滞在
-                    </h3>
-                    <p class="media__text">
-                        18番ホールを望む最高のロケーションに<br />
-                        KATADA Lodge＆villaを開業。<br />
-                        ゴルフを楽しんだ後は、<br />
-                        ゴルフ場を眺めながらのんびりと時を過ごせます。
-                    </p>
-                    <a href="{{pages.facility.url}}" class="media__btn">詳細はこちら</a>
-                </div>
-            </article>
-
-                        <article class="media">
-                <figure class="media__img">
-                    <img
-                        src="{{ 'jinja.jpg' | asset_img_url: '3000x'}}"
-                        width="513"
-                        height="311"
-                        alt="倶楽部を見守る椿大神社"
-                        class="media__img--pc"
-                    />
-                    <img
-                        src="{{ 'jinja.jpg' | asset_img_url: '3000x'}}"
-                        width="513"
-                        height="311"
-                        alt="倶楽部を見守る椿大神社"
-                        class="media__img--sp"
-                    />
-                </figure>
-                <div
-                    class="media__body js-rellax"
-                    data-rellax-speed="3"
-                    data-rellax-percentage="0.5"
-                >
-                    <p class="media__num section__num">03.</p>
-                    <h3 class="media__ttl">
-                        地域を守ってくれている神様<br />
-                        椿神山との繋がり
-                        
-                    </h3>
-                    <p class="media__text">
-                        津カントリー倶楽部の近隣には二千年の歴史を持つ<br />
-                        日本最古の神社である椿神山があります。<br />
-                        深い竹林の向こうにある椿神山は、<br />
-                        津カントリー倶楽部のクラブハウス真正面方向に位置します。<br />
-                        椿神山にも大黒様がいらっしゃいます。<br />
-                        椿神山はゴルフ場全てを見渡す場所にあるので、<br />
-                        毎日私たちのプレーを見守ってくれています。
-                    </p>
-                    
-                </div>
-            </article>
+{% section 'top-media' %}
 
             <section class="eventInfo">
                 <div class="eventInfo__inner">
