セクションの追加

--- a/sections/top-media.liquid
+++ b/sections/top-media.liquid
@@ -123,3 +123,47 @@
                     
                 </div>
             </article>
+
+
+
+{% schema %}
+ {
+   "name": "Top Contents",
+   "settings": [
+     {
+       "type": "text",
+       "id": "contentsHead01",
+       "label": Top-Contents-Head01
+     },
+     {
+       "type": "textarea",
+       "id": "contentsDetail01",
+       "label": Top-Contents-Detail01
+     },
+     {
+       "type": "text",
+       "id": "contentsHead02",
+       "label": Top-Contents-Head02
+     },
+     {
+       "type": "textarea",
+       "id": "contentsDetail02",
+       "label": Top-Contents-Detail02
+     },
+     {
+       "type": "text",
+       "id": "contentsHead03",
+       "label": Top-Contents-Head03
+     },
+     {
+       "type": "textarea",
+       "id": "contentsDetail03",
+       "label": Top-Contents-Detail03
+     },
+
+   ]
+ }
+
+
+
+{%endschema%}
