セクションの追加

--- a/sections/top-media.liquid
+++ b/sections/top-media.liquid
@@ -120,61 +120,33 @@
      {
        "type": "text",
        "id": "contentsHead01",
-       "label": "Top-Contents-Head01",
-       "default": "広大な敷地内にレイアウトされた
-                        戦略性に富むオリジナルコース"
+       "label": "Top-Contents-Head01"
      },
      {
        "type": "textarea",
        "id": "contentsDetail01",
-       "label": "Top-Contents-Detail01",
-       "defalt": "尾崎将司プロと佐藤謙太郎氏の設計・監修による、
-                    豊富なデータを生かした特徴的なコースデザイン。
-
-                    7,023ヤードというロングディスタンスのコースは、
-                    ベントのワングリーンやそそり立つリベットバンカー、
-                    レンガに囲まれた大きな池など、
-                    美しさと戦略性が見事なバランスを保ち、
-                    プレイヤーの挑戦意欲をかき立てます。
-
-                    四季を通じて美しい緑を舞台に、
-                    ベストコンディションでプレイが楽しめます。"
+       "label": "Top-Contents-Detail01"
      },
      {
        "type": "text",
        "id": "contentsHead02",
-       "label": "Top-Contents-Head02",
-       "defalt": "ゴルフ場までの距離0m
-                        日本の伝統美を感じるロッジへの滞在"
+       "label": "Top-Contents-Head02"
      },
      {
        "type": "textarea",
        "id": "contentsDetail02",
-       "label": "Top-Contents-Detail02",
-       "defalt": "18番ホールを望む最高のロケーションに
-                        KATADA Lodge＆villaを開業。
-                        ゴルフを楽しんだ後は、
-                        ゴルフ場を眺めながらのんびりと時を過ごせます。"
+       "label": "Top-Contents-Detail02"
      },
      {
        "type": "text",
        "id": "contentsHead03",
-       "label": "Top-Contents-Head03",
-       "defalt": "地域を守ってくれている神様
-                        椿神山との繋がり"
+       "label": "Top-Contents-Head03"
 
      },
      {
        "type": "textarea",
        "id": "contentsDetail03",
-       "label": "Top-Contents-Detail03",
-       "defalt": "津カントリー倶楽部の近隣には二千年の歴史を持つ
-                        日本最古の神社である椿神山があります。
-                        深い竹林の向こうにある椿神山は、
-                        津カントリー倶楽部のクラブハウス真正面方向に位置します。
-                        椿神山にも大黒様がいらっしゃいます。
-                        椿神山はゴルフ場全てを見渡す場所にあるので、
-                        毎日私たちのプレーを見守ってくれています。"
+       "label": "Top-Contents-Detail03"
      }
 
    ]
