bodyタグのクラス名の分岐

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,6 +49,8 @@
                    <body class="bkWhite postContainer">
  
   
+     {% elseif template != 'index' %}
+                   <body class="postContainer">
      {% else %}
     <body>
     {% endif %}
