bodyタグのクラス名の分岐

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,7 +49,7 @@
                    <body class="bkWhite postContainer">
  
   
-     {% elseif template != 'index' %}
+     {% elsif template != 'index' %}
                    <body class="postContainer">
      {% else %}
     <body>
