--- a/sections/top-media.liquid
+++ b/sections/top-media.liquid
@@ -107,6 +107,7 @@
                         毎日私たちのプレーを見守ってくれています。 {% endcomment %}
                         {{ section.settings.contentsDetail03 }} 
                     </p>
+                    <a href="{{pages.facility.url}}" class="media__btn">詳細はこちら</a>
                     
                 </div>
             </article>
