--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -7,6 +7,31 @@
 
 {% section 'top-media' %}
 
+
+
+{% comment %} 法人会員のセクション {% endcomment %}
+  <section class="sec05 sec">
+    <div class="bkimg__contents flex">
+      <div class="bkimg__contents__txtBox">
+        <h2>NEXT GOLF COMMUNITY 創生</h2>
+        <p class="min">50万坪のお庭を共有しましょう</p>
+        <div class="btnwrap">
+            <a href="#" class="Btn bgleft">
+              <span>詳細を見る</span>
+            </a>
+            <a href="#" class="Btn bgleft">
+              <span>申込書ダウンロード</span>
+            </a>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+
+{% comment %} ここまで220520-横澤 {% endcomment %}
+
             <section class="eventInfo">
                 <div class="eventInfo__inner">
 <!--                     <p class="eventInfo__num section__num">04.</p> -->
