法人セクションの削除

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -9,7 +9,7 @@
 
 
 
-{% comment %} 法人会員のセクション {% endcomment %}
+{% comment %} 法人会員のセクション 
   <section class="sec05 sec">
     <div class="bkimg__contents flex">
       <div class="bkimg__contents__txtBox">
@@ -30,7 +30,7 @@
   </section>
 
 
-{% comment %} ここまで220520-横澤 {% endcomment %}
+ ここまで220520-横澤 {% endcomment %}
 
             <section class="eventInfo">
                 <div class="eventInfo__inner">
