予約動線の追加

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -2125,6 +2125,8 @@ th {
   margin-bottom: 10.7vw;
 }
 
+
+
 .price__subTtl {
   margin-bottom: 10.7vw;
 }
@@ -5581,5 +5583,39 @@ height: 1000px;
   }
 }
 /* ここまで */
+
+/* 予約バナー周辺の変更 */
+.reserves{
+  margin-bottom: 100px;
+}
+
+/* 追記0622予約動線の追加 */
+.banners{
+  width: 88.4375vw;
+  margin: 0 auto;
+}
+
+.banners .banner{
+  display: flex;
+  width: 100%;
+}
+
+.banners .banner a{
+  width: 50%;
+  text-align: center;
+  color: #000;
+  background: grey;
+  font-size: 30px;
+  border: 2px solid #000;
+  line-height: 400px;
+}
+
+.banners .banner a:hover{
+  opacity: .4;
+}
+
+.banners .accordion__box{
+  padding: 0;
+}
 
 /*# sourceMappingURL=main.css.map */
