ヘッダーの高さの微調整

--- a/assets/main.css.liquid
+++ b/assets/main.css.liquid
@@ -824,7 +824,7 @@ body {
           appearance: none;
   z-index: 99999;
   position: fixed;
-  top: 3.125vw;
+  top: 6.125vw;
   left: 3.125vw;
   width: 4.6875vw;
   height: 3.125vw;
@@ -2277,6 +2277,7 @@ th {
     padding-top: 19px;
     padding-right: 41px;
     padding-left: 38px;
+    padding-bottom: 19px;
   }
   .pageLogo-pc{
     width: 217px;
@@ -2567,9 +2568,7 @@ th {
   .pageVisual--res-price{
     margin-bottom: 65px;
   }
-  .pageVisual__inner{
-    padding-top: 71px;
-  }
+
   .pageVisual__img--sp{
     display: none;
   }
