--- a/templates/page.reserve-price.liquid
+++ b/templates/page.reserve-price.liquid
@@ -23,7 +23,7 @@
                 <ul class="pageNav__list">
                     <li class="pageNav__item">
                         <a href="#reserve" class="pageNav__link"
-                            >予約カレンダー</a
+                            >ご予約</a
                         >
                     </li>
                     <li class="pageNav__item">
@@ -41,8 +41,8 @@
             <div class="banners">
 
                 <div class="reserve__area banner">
-                    <a href="https://webpack2.jp/mypage/login/member/533302" class="reserve__banner-member">メンバーの方</a>
-                    <a href="https://webpack2.jp/reserve/calendar/visitor/533302" class="reserve__banner-visitor">ビジターの方</a>
+                    <a href="https://webpack2.jp/mypage/login/member/533302" class="reserve__banner-member"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/03-04.png?v=1656837948" alt=""></a>
+                    <a href="https://webpack2.jp/reserve/calendar/visitor/533302" class="reserve__banner-visitor"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/03-03.png?v=1656837948" alt=""></a>
                 </div>
 
                 
@@ -56,8 +56,8 @@
                                     24部屋のツインルームがあります。ミニマムな造りながら、天然素材を使用した質感とこだわりのリネンによる寝心地を重視した設計・仕様となっています。小高い丘に建つ、18番ホールを望む絶景のVillaはツインルームとキングサイズベットのお部屋があります。自慢の檜風呂は半露天式です。
                                 </p> {% endcomment %}
                                 <div class="mypage__area banner">
-                                    <a href="https://webpack2.jp/mypage/login/member/533302" class="mypage__banner-member">メンバーの方</a>
-                                    <a href="https://webpack2.jp/mypage/login/visitor/533302" class="mypage__banner-visitor">ビジターの方</a>
+                                    <a href="https://webpack2.jp/mypage/login/member/533302" class="mypage__banner-member"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/03-04.png?v=1656837948" alt=""></a>
+                                    <a href="https://webpack2.jp/mypage/login/visitor/533302" class="mypage__banner-visitor"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/03-03.png?v=1656837948" alt=""></a>
                                 </div>
 
 
@@ -65,6 +65,10 @@
                 </div>
 
             
+            </div>
+
+            <div class="newMember">
+                <a href="https://webpack2.jp/member/regist/entry/533302"><img src="https://cdn.shopify.com/s/files/1/0616/2949/7533/files/03-02.png?v=1656837948" alt=""></a>
             </div>
         </section>
 
