--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -49,7 +49,7 @@
                     >
                 </p>
             </nav>
-            <section class="mainVisual">
+            {% comment %} <section class="mainVisual">
                 <ul class="slider-1">
                     <li id="slider-1__item01"class="slider-1__item" style="background-image: url('{{section.settings.slider-1__item01 | img_url: '1920x'}}'); "></li>
                     <li id="slider-1__item02"class="slider-1__item" style="background-image: url('{{section.settings.slider-1__item02 | img_url: '1920x'}}'); "></li>
@@ -66,7 +66,9 @@
                         />
                     </h1>
                 </div>
-            </section>
+            </section> {% endcomment %}
+
+            {% comment %} Mainvisualの差し替えを削除 {% endcomment %}
            
 
             <nav class="globalNav">
@@ -160,7 +162,7 @@
 
 
 
-{% schema %}
+{% comment %} {% schema %}
 
 {
     "name": "Main Visual",
@@ -189,4 +191,4 @@
 }
 
 
-{% endschema %}
+{% endschema %} Main Visualのセクションを削除{% endcomment %}
