オープニングアニメーションの実装

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -69,6 +69,35 @@
             </section> {% endcomment %}
 
             {% comment %} Mainvisualの差し替えを削除 {% endcomment %}
+
+                <section class="top-bg" id="top-bg">
+                    <div class="veil"></div>
+                    <div class="top-bg__contents">
+                        <article class="top-bg__catch" id="top-bg__item__00">
+                            <div class="top-bg__txt-opening">
+                            <div class="top-bg__txt-opening--upper" id="top-logo-wrapper">
+                                
+                                <a href="#">
+                                    <img src="{{ 'logo.png' | asset_img_url: '1200x'}}" alt="ロゴ">
+                                    
+                                
+
+                                </a>
+                            </div>
+                            <div class="top-bg__txt-opening--lower">
+                                <div class="opening-title en" id="opening-title">NEXT GOLF<br class="br-374"> COMMUNITY</div>
+                                <span class="opening-partition" id="opening-partition"></span>
+                                <div id="opening-ani-end">
+                                <a href="#" class="js-hover-animation">
+                                    <h1>“津カントリー倶楽部の軌跡を辿る”</h1>
+                                    <p class="en">OUR STORY</p>
+                                </a>
+                                </div>
+                            </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
            
 
             <nav class="globalNav">
