--- a/assets/opening-style.css.liquid
+++ b/assets/opening-style.css.liquid
@@ -56,7 +56,7 @@ a{
   align-items: center;
   width: 100%;
   height: 100%;
-  background-image: url(../img/top-sec00-bg.jpg);/*画像差し替え*/
+  background-image: url("{{ 'top-sec00-bg' | asset_img_url: '1200x'}}");/*画像差し替え*/
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -195,7 +195,7 @@ a{
 /*responsive*/
 @media screen and (max-width : 768px) {
   .top-bg__catch{
-    background-image: url(../img/top-sec00-bg--sp.jpg);/*画像差し替え*/
+    background-image: url("{{ 'top-sec00-bg--sp.jpg' | asset_img_url: '1200x'}}");/*画像差し替え*/
   }  
   .top-bg__contents{
     overflow: initial;
