ネクストゴルフコミュニティページの追加

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -50,6 +50,10 @@
     {%elsif template == 'product'%}
 		
                    <body class="bkWhite postContainer">
+    
+    {%elsif template == 'next-golf-community'%}
+		
+                   <body class="over-hidden">
  
   
      {% elsif template != 'index' %}
