communityページ作成

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,8 +51,7 @@
 		
                    <body class="bkWhite postContainer">
     
-    {%elsif template == 'next-golf-community'%}
-		
+    {%elsif template == 'community'%}
                    <body class="over-hidden">
  
   
